# udc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: aligned_buffer.rs  config.rs  constants.rs  enums.rs  lib.rs  main.rs  pipeline.rs  reader.rs  writer.rs
src/pipeline/: conv.rs  metrics.rs  mod.rs  reader.rs  tests.rs  utils.rs  writer.rs
src/reader/: utils.rs
src/writer/: utils.rs
